# snackis

./: CMakeLists.txt  README.md  todo.org
src/: main.cpp
src/snackis/: error.hpp  std.hpp
src/snackis/db/: column.cpp  column.hpp  context.hpp  def.hpp  table.cpp  table.hpp
src/snackis/gui/: app.cpp  app.hpp  loop.cpp  loop.hpp
src/snackis/libs/: db.cpp  db.hpp  gui.cpp  gui.hpp
src/snackis/types/db/: column.cpp  column.hpp  context.cpp  context.hpp  table.cpp  table.hpp
